# beacon

./: .gitignore  LICENSE  README.md  ROADMAP.md  SESSION_LOG.md  pyproject.toml  run_tests.py
.github/: BEACON_RULES.md
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config.py  config_lint.py  db_cli.py  health.py  ingest.py  logging_utils.py  migrations.py  models.py  ops.py  retry.py  shell.py  store.py  store_pagination.py  sync.py
src/advanced/: __init__.py  api.py  export.py  meeting_prep.py  relationships.py  retrospective.py  time_audit.py  trends.py
src/connectors/: __init__.py  base.py  calendar_connector.py  email_connector.py  github_connector.py  hackernews.py  news.py  weather.py
src/web/: __init__.py  (+4 more)
tests/: conftest.py  test_advanced.py  test_advanced_api.py  test_advanced_core.py  test_bench_store.py  test_calendar_connector.py  test_cli.py  test_config.py  test_config_lint.py  test_connectors.py  test_db_cli.py  test_email_connector.py  test_export_health_cli.py  test_github_connector.py  test_hackernews_connector.py  test_health.py  test_ingest.py  test_intelligence.py  test_logging_utils.py  test_migrations.py  test_models.py  test_news_connector.py  test_notifications.py  test_ops.py  test_retry.py  test_shell.py  test_store.py  test_store_api.py  test_store_export.py  test_store_migrations_integration.py  test_store_pagination.py  test_store_query_pagination.py  test_sync_daemon_cli.py  test_sync_retry_integration.py  test_weather_connector.py  test_web.py  test_web_routes.py  test_web_store_api.py  test_web_store_stats_api.py
(+23 files in other folders)
